# Planter

./: Cargo.toml  README.md  mise.toml
.github/workflows/: ci.yml
crates/planter/: Cargo.toml
crates/planter-core/: Cargo.toml
crates/planter-core/src/: errors.rs  ids.rs  lib.rs  paths.rs  protocol.rs  time.rs
crates/planter-core/tests/: protocol_roundtrip.rs
crates/planter-execd/: Cargo.toml
crates/planter-execd-proto/: Cargo.toml
crates/planter-execd-proto/src/: lib.rs
crates/planter-execd/src/: lib.rs  main.rs  pty.rs
crates/planter-ipc/: Cargo.toml
crates/planter-ipc/src/: client.rs  codec.rs  error.rs  framing.rs  lib.rs  server.rs
crates/planter-ipc/tests/: client_server.rs  framing.rs
crates/planter-platform/: Cargo.toml
crates/planter-platform-macos/: Cargo.toml
crates/planter-platform-macos/profiles/: 00-header.sb  10-process.sb  20-filesystem.sb  30-network.sb
crates/planter-platform-macos/src/: lib.rs
crates/planter-platform/src/: lib.rs
crates/planter/src/: main.rs
crates/planterd/: Cargo.toml
crates/planterd/src/: dispatch.rs  handlers.rs  main.rs  pty.rs  state.rs  worker.rs  worker_manager.rs
plans/: bootstrap-plan.md  planterd-planter-execd-migration.md  post-bootstrap-plan.md
