[workspace]
members = [
  "crates/planter-core",
  "crates/planter-ipc",
  "crates/planter-execd-proto",
  "crates/planter-execd",
  "crates/planter-platform",
  "crates/planter-platform-macos",
  "crates/planterd",
  "crates/planter",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.93"

[workspace.dependencies]
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
portable-pty = "0.8"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "io-std", "time", "signal", "process", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
