[package]
name = "planter-execd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
planter-core = { path = "../planter-core" }
planter-execd-proto = { path = "../planter-execd-proto" }
planter-ipc = { path = "../planter-ipc" }
portable-pty.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
