[package]
name = "planter-ipc"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
planter-core = { path = "../planter-core" }
serde.workspace = true
serde_cbor.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
