[package]
name = "planter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
planter-core = { path = "../planter-core" }
planter-ipc = { path = "../planter-ipc" }
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
