[package]
name = "planterd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
planter-core = { path = "../planter-core" }
planter-ipc = { path = "../planter-ipc" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
