[package]
name = "planterd"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
portable-pty.workspace = true
planter-core = { path = "../planter-core" }
planter-ipc = { path = "../planter-ipc" }
planter-platform = { path = "../planter-platform" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
planter-platform-macos = { path = "../planter-platform-macos" }

[dev-dependencies]
tempfile.workspace = true
